distance off path

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="hello_world">Hello world!</string>
     <string name="go">Go</string>
     <string name="title">PebbleNav</string>
+    <string name="empty"></string>
 
 </resources>
