fixing rotation and ui

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="app_name">pebbleNav</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
-    <string name="go">Go</string>
+    <string name="go">Nav</string>
     <string name="title">PebbleNav</string>
     <string name="empty"></string>
 
